# WtFileUtils

./: LICENSE  README.md  pyproject.toml
Examples/: BlkTest.py  VromfsTest.py
cpp/: .gitignore  CMakeLists.txt
cpp/cmake/: functions.cmake
cpp/debugging/: CMakeLists.txt
cpp/debugging/Cmain/: CMakeLists.txt  main.cpp
cpp/debugging/VromfsTest/: CMakeLists.txt  main.cpp
cpp/debugging/main/: CMakeLists.txt
cpp/debugging/testing/: main.cpp
cpp/src/: CMakeLists.txt
cpp/src/BitStream/: BitStream.cpp  CMakeLists.txt
cpp/src/DataBlock/: CMakeLists.txt  DataBlockShared.cpp
cpp/src/FileSystem/: CMakeLists.txt  FSObject.cpp  File.cpp
cpp/src/VROMFs/: CMakeLists.txt  VROMFs.cpp
cpp/src/include/: BitStream.h  FileSystem.h  ThreadPool.h  VROMFs.h  reader.h  utils.h
cpp/src/rapidjson/include/rapidjson/: document.h
cpp/src/reader/: CMakeLists.txt  ZlibRead.cpp
src-cpp/: .gitignore  CMakeLists.txt
src-cpp/BitStream/: CMakeLists.txt
src-cpp/Cmain/: CMakeLists.txt
src-cpp/DataBlock/: BLK_serialize.cpp  CMakeLists.txt  DataBlock.cpp
src-cpp/FileSystem/: CMakeLists.txt  Directory.cpp
src-cpp/VROMFs/: CMakeLists.txt
src-cpp/VromfsTest/: CMakeLists.txt  main.cpp
src-cpp/arc/: CMakeLists.txt
src-cpp/arc/lzma-9.20/: lzma.txt
src-cpp/arc/zstd-1.4.5/: CMakeLists.txt  zstd.h
src-cpp/arc/zstd-1.4.5/common/: huf.h
src-cpp/include/: BitStream.h  DataBlock.h  VROMFs.h  reader.h
src-cpp/main/: main.cpp
src-cpp/rapidjson/include/rapidjson/: stream.h
src-cpp/reader/: CMakeLists.txt  Readers.cpp
src-cpp/testing/: CMakeLists.txt
src-cpp/tests/testFiles/: findByPrefix.blk
src/WtFileUtils/: BitStream.py  BitStream.pyi  DataHandler.py  Exceptions.py  writeStream.py
src/WtFileUtils/FileSystem/: FSDirectory.py  File.py  FileSystemQuery.py  Filesystem.py
src/WtFileUtils/Utils/: Lists.py
src/WtFileUtils/blk/: BlkBuilder.py  BlkParser.py  Block.py  Chunk.py  FileInfo.py  ParamParser.py  TypeParsedDEP.py
src/WtFileUtils/new_blk/: DataBlock.py  NameMap.py
src/WtFileUtils/vromfs/: FileInfoUtils.py  VROMFs.py  VROMFsCollection.py  metadata.py
tests/: DataBlockTest.py  testVromfs.py
tests/testFiles/: cmngetbin.blk
